Use Map.copyOf and Set.copyOf where appropriate